--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
     padding :0;
     font-family: "Outfit",Arial, Helvetica, sans-serif; /*default we are saying outfit as fouunt style*/
 }
+
+html {
+    scroll-behavior:smooth;
+}
