--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -62,7 +62,7 @@
   }
 
   .aboutItem h3{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 600;
   }
 
@@ -84,6 +84,15 @@
     }
     .aboutItems{
         margin-top: 29px;
+    }
+
+    .aboutItem h3{
+      font-size: 12px;
+      font-weight: 600;
+    }
+  
+    .aboutItem p{
+      font-size: 7px;
     }
 
     .aboutItem{
