--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -86,13 +86,19 @@
         margin-top: 29px;
     }
 
+    .aboutItems img{
+      display : none;
+  }
+
+    
+
     .aboutItem h3{
-      font-size: 12px;
+      font-size: 20px;
       font-weight: 600;
     }
   
     .aboutItem p{
-      font-size: 7px;
+      font-size: 15px;
     }
 
     .aboutItem{
