--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -55,10 +55,10 @@
     .text {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      /* align-items: center; */
     }
   
     .links {
-      align-items: center;
+      /* align-items: center; */
     }
   }
